--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.facebook.stetho:stetho:1.2.0'
     compile 'com.uphyca:stetho_realm:0.8.0'
+    compile 'biz.kasual:materialnumberpicker:1.2.0'
 }
