--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.github.thorbenprimke:realm-searchview:0.9.4'
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'io.realm:realm-android:0.87.4'
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.facebook.stetho:stetho:1.2.0'
     compile 'com.uphyca:stetho_realm:0.8.0'
-    compile 'biz.kasual:materialnumberpicker:1.2.0'
 }
